# rapyuta-io-sdk

./: .buildinfo  .dockerignore  .gitignore  .releaserc.json  CNAME  CONTRIBUTING.md  Pipfile  README.md  auth.html  build.html  configuration.html  deployment.html  device.html  genindex.html  index.html  metrics.html  native_network.html  objects.inv  organization.html  package.html  parameter.html  project.html  py-modindex.html  pyproject.toml  rosbag.html  routed_network.html  search.html  searchindex.js  secret.html  setup.py  static_route.html  user_group.html  volumes.html
.github/workflows/: conventional-commits.yml  gh-pages.yaml  pull-request.yaml  pypi.yaml  (+1 more)
CHANGELOG/: CHANGELOG-before-1.0.md  CHANGELOG.md  README.md
_sources/: build.rst.txt  configuration.rst.txt  deployment.rst.txt  device.rst.txt  index.rst.txt  organization.rst.txt  parameter.rst.txt  rosbag.rst.txt  routed_network.rst.txt  secret.rst.txt  user_group.rst.txt
rapyuta_io/: __init__.py  rio_client.py
scripts/: bump-version.sh
sdk_test/: config.json.example  config.py  entrypoint.sh  hwil.py  run_rio_sdk_test.py  util.py  v2_client.py
tests/: build_test.py  client_get_package_test.py  deployment_test.py  device_config_test.py  device_label_test.py  device_test.py  logs_test.py  metric_test.py  native_network_test.py  objbase_test.py  objdict_test.py  package_test.py  paramserver_test.py  persistent_volume_test.py  project_test.py  query_metrics_test.py  rest_test.py  rosbag_test.py  routed_network_test.py  secret_test.py  topic_test.py  user_group_test.py  user_test.py  util_test.py
(+113 files in other folders)
