[project]
name = "rapyuta-io"
dynamic = ["version"]
description = "Rapyuta.io Python SDK"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Rapyuta Robotics", email = "opensource@rapyuta-robotics.com" },
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "requests>=2.20.0",
    "six>=1.16.0",
    "urllib3>=1.23",
    "python-dateutil>=2.8.2",
    "pytz",
    "pyyaml>=5.4.1",
    "setuptools",
    "azure-storage-blob>=12.20.0",
]

[project.optional-dependencies]
dev = ["sphinx", "furo"]
test = ["testtools", "pyfakefs", "mock"]
docs = ["pytz", "tzdata", "sphinx", "furo"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rapyuta_io"]

[tool.hatch.version]
path = "rapyuta_io/__init__.py"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "coverage",
    "testtools",
    "pyfakefs>=5.3",
    "mock",
]

